--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,5 @@
-<!-- Navbar Section Start -->
 <nav class="navbar navbar-expand-lg navbar-light py-0" style="background-color: #4274AD; box-shadow: 0 2px 5px rgba(0,0,0,0.15);" uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-  <div class="container" style="flex-wrap: nowrap;">
+  <div class="container">
 
     <a href="index.html" class="navbar-brand" style="font-family: 'Open Sans', sans-serif;">
       <img src="./img/AssetsMan.png" class="img-fluid p-0" style="height: 40px;">
@@ -11,9 +10,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navBar">
-      <ul class="navbar-nav justify-content-center" style="font-family: 'Open Sans', sans-serif;">
-        <li class="nav-item" style="margin: 0 15px;">
+    <div class="collapse navbar-collapse d-flex justify-content-between flex-nowrap" id="navBar">
+      
+      <!-- Left side menu -->
+      <ul class="navbar-nav" style="font-family: 'Open Sans', sans-serif;">
+        <li class="nav-item mx-3">
           <a class="nav-link" href="help_im_new.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
@@ -21,7 +22,7 @@
              Help! I'm New
           </a>
         </li>
-        <li class="nav-item" style="margin: 0 15px;">
+        <li class="nav-item mx-3">
           <a class="nav-link" href="OurPhilosophy.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
@@ -29,7 +30,7 @@
              Coaching Philosophy
           </a>
         </li>
-        <li class="nav-item" style="margin: 0 15px;">
+        <li class="nav-item mx-3">
           <a class="nav-link" href="academy.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
@@ -38,7 +39,7 @@
           </a>
         </li>
 
-        <li class="nav-item dropdown" style="margin: 0 15px;">
+        <li class="nav-item dropdown mx-3">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false" style="color: white;">
             About Us
@@ -50,19 +51,18 @@
             <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
           </div>
         </li>
-
-        <li class="nav-item" style="margin: 0 15px;">
-          <a class="btn btn-warning" href="register.html" style="padding: 8px 20px; font-weight: bold;">
-            <b>Register Now</b>
-          </a>
-        </li>
       </ul>
 
-      <!-- Phone number on far right -->
-      <a href="tel:+61400123456" class="navbar-text text-white ml-auto" style="white-space: nowrap; font-weight: 600; font-size: 1rem; text-decoration: none; padding-left: 15px;">
-        📞 +61 400 123 456
-      </a>
+      <!-- Right side buttons group -->
+      <div class="d-flex align-items-center flex-nowrap">
+        <a class="btn btn-warning mr-3" href="register.html" style="padding: 8px 20px; font-weight: bold;">
+          <b>Register Now</b>
+        </a>
+        <a href="tel:+61400123456" class="text-white" style="white-space: nowrap; font-weight: 600; font-size: 1rem; text-decoration: none;">
+          📞 +61 400 123 456
+        </a>
+      </div>
+
     </div>
   </div>
 </nav>
-<!-- Navbar Section End -->
