--- a/navbar.html
+++ b/navbar.html
@@ -6,44 +6,23 @@
       <img src="./img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px;">
     </a>
 
-    <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse d-flex justify-content-between flex-nowrap" id="navBar">
-      
-      <!-- Left side menu -->
-      <ul class="navbar-nav" style="font-family: 'Open Sans', sans-serif;">
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="help_im_new.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Help! I'm New
-          </a>
+    <div class="collapse navbar-collapse" id="navBar">
+      <ul class="navbar-nav mr-auto" style="font-family: 'Open Sans', sans-serif;">
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="help_im_new.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Help! I'm New</a>
         </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="OurPhilosophy.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Coaching Philosophy
-          </a>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="OurPhilosophy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Coaching Philosophy</a>
         </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="academy.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Academy Phenomena
-          </a>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="academy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Academy Phenomena</a>
         </li>
-
-        <li class="nav-item dropdown mx-3">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="color: white;">
-            About Us
-          </a>
+        <li class="nav-item dropdown mx-2">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">About Us</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
             <a class="dropdown-item" href="Staff.html">Staff</a>
@@ -53,16 +32,11 @@
         </li>
       </ul>
 
-      <!-- Right side buttons group -->
-      <div class="d-flex align-items-center flex-nowrap">
-        <a class="btn btn-warning mr-3" href="register.html" style="padding: 8px 20px; font-weight: bold;">
-          <b>Register Now</b>
-        </a>
-        <a href="tel:+61400123456" class="text-white" style="white-space: nowrap; font-weight: 600; font-size: 1rem; text-decoration: none;">
-          📞 +61 400 123 456
-        </a>
+      <div class="d-flex align-items-center" style="white-space: nowrap;">
+        <a class="btn btn-warning mr-3" href="register.html" style="padding: 8px 20px; font-weight: bold;">Register Now</a>
+        <a href="tel:+61400123456" class="text-white" style="font-weight: 600; font-size: 1rem; text-decoration: none;">📞 +61 400 123 456</a>
       </div>
-
     </div>
+
   </div>
 </nav>
