--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foot and Ball Academy</title>
 
-  <!-- Stylesheets -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -30,31 +30,35 @@
       height: 100%;
     }
 
-    .fb-page, .yt-feed iframe {
-      width: 100% !important;
-      border-radius: 8px;
-      min-height: 400px;
-      max-height: 600px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    .btn-register {
+      margin-top: 15px;
     }
 
     iframe {
+      width: 100% !important;
       max-width: 100%;
-      border: 0;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    #map-section iframe {
-      height: 500px !important;
+    .embed-responsive {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      height: 0;
     }
 
-    #map-section {
-      margin: 0;
-      padding: 0 15px;
+    .embed-responsive iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
     }
 
-    #map-section h3,
-    #map-section p {
-      text-align: center;
+    .fb-page,
+    .youtube-embed {
+      min-height: 400px;
+      max-height: 600px;
     }
 
     .section-card.text-center {
@@ -63,51 +67,70 @@
       text-align: center;
     }
 
-    .dual-feeds {
-      margin: 30px 0;
-    }
-
-    .footer-cta {
+    #get-started {
       background-color: #4274AD;
       color: white;
       padding: 2rem 0;
       text-align: center;
     }
+
+    #get-started h3 {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+
+    #get-started p {
+      font-size: 1.1rem;
+    }
+
+    footer {
+      background-color: #000;
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+    }
   </style>
 </head>
 
 <body>
-  <!-- Facebook SDK -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
     nonce="FBSDK"></script>
 
-  <!-- Navbar placeholder -->
   <div id="nav-placeholder"></div>
 
   <main class="main-section container">
-
-    <!-- Middle Row: Mission | Map | Founder -->
-    <div class="row align-items-stretch">
+    <!-- Top Row: Our Mission | Map | Founder -->
+    <div class="row d-flex align-items-stretch">
+      <!-- Our Mission -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Our Mission</h3>
-          <p>Helping young players grow through purposeful football education.</p>
+          <p>We are an educational establishment focused on long-term individual player development.</p>
+          <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
+          <p>Due to time and staffing restrictions, we currently only offer elite level sessions targeting ambitious
+            players hungry to improve.</p>
+          <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
       </div>
 
+      <!-- Map -->
       <div class="col-lg-6 col-md-12 d-flex">
-        <div class="section-card d-flex flex-column w-100">
+        <div class="section-card d-flex flex-column justify-content-center w-100">
           <h3 class="text-center">Find Us</h3>
           <p class="text-center">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-            width="100%" height="300" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+          <div class="embed-responsive">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+              width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </div>
 
+      <!-- Meet Our Founder -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column align-items-center">
           <h3>Meet Our Founder</h3>
@@ -115,22 +138,24 @@
             from around the world.</p>
           <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
           <a target="_blank" href="Staff.html">
-            <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
+            <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle"
+              style="max-width: 150px;" />
           </a>
         </div>
       </div>
     </div>
 
-    <!-- Bottom Feeds: Facebook and YouTube -->
-    <div class="row dual-feeds">
-      <div class="col-lg-6 col-md-12">
-        <div class="section-card">
-          <h4 class="text-center">Facebook Feed</h4>
-          <div class="fb-page"
+    <!-- Bottom Row: Facebook Feed | YouTube Feed -->
+    <div class="row d-flex align-items-stretch">
+      <!-- Facebook -->
+      <div class="col-md-6 d-flex">
+        <div class="section-card d-flex flex-column w-100">
+          <h3 class="text-center">Latest from our Facebook</h3>
+          <div class="fb-page flex-grow-1"
             data-href="https://www.facebook.com/footandball.academy"
             data-tabs="timeline"
             data-width="100%"
-            data-height="400"
+            data-height="500"
             data-small-header="true"
             data-adapt-container-width="true"
             data-hide-cover="true"
@@ -142,27 +167,29 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-md-12">
-        <div class="section-card yt-feed">
-          <h4 class="text-center">YouTube Feed</h4>
-          <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=YOUR_CHANNEL_NAME"
-            allowfullscreen></iframe>
+      <!-- YouTube -->
+      <div class="col-md-6 d-flex">
+        <div class="section-card d-flex flex-column w-100">
+          <h3 class="text-center">Latest on YouTube</h3>
+          <div class="embed-responsive">
+            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=YourYouTubeUsername"
+              title="YouTube Feed" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </div>
-
   </main>
 
-  <!-- Footer CTA -->
-  <section class="footer-cta">
+  <!-- Get Started CTA -->
+  <section id="get-started">
     <div class="container">
-      <h3 style="font-size: 2rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
-      <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
+      <h3>Football is the World Game.</h3>
+      <p>Foot and Ball Academy is proud to be a part of that.</p>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer style="background-color: #000; color: white; text-align: center; padding: 1rem 0;">
+  <footer>
     <div id="foot-placeholder"></div>
   </footer>
 
@@ -173,12 +200,13 @@
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
 
-  <!-- Dynamic Navbar and Footer -->
   <script>
     $(document).ready(function () {
       $("#nav-placeholder").load("navbar.html");
       $("#foot-placeholder").load("footer.html");
     });
   </script>
+
 </body>
+
 </html>
