--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html lang="en">
 
 <head>
+  <!-- Meta and title -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foot and Ball Academy</title>
 
+  <!-- Stylesheets: Bootstrap, UIKit, and local main.css -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css" />
 
+  <!-- Inline styles for layout and specific components -->
   <style>
+    /* Body base styles */
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       line-height: 1.6;
+      background-color: #f4f4f4;
     }
 
+    /* Main container padding */
     .main-section {
       padding: 50px 15px;
     }
 
+    /* Card style for content boxes */
     .section-card {
       background-color: #ffffff;
       padding: 20px;
@@ -30,10 +36,29 @@
       height: 100%;
     }
 
+    /* Register button margin */
     .btn-register {
       margin-top: 15px;
     }
 
+    /* Facebook container and map section layout */
+    .fb-container,
+    #map-section {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+
+    /* Facebook page plugin sizing */
+    .fb-page {
+      flex-grow: 1;
+      min-height: 400px;
+      max-height: 600px;
+      width: 100% !important;
+    }
+
+    /* Iframe base styling */
     iframe {
       width: 100% !important;
       max-width: 100%;
@@ -41,70 +66,66 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    .embed-responsive {
-      position: relative;
-      width: 100%;
-      padding-bottom: 56.25%;
-      height: 0;
+    /* Specifically set Google map iframe height taller */
+    #map-section iframe {
+      height: 620px !important; /* increased from 500px */
     }
 
-    .embed-responsive iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
+    /* Margins for map section */
+    #map-section {
+      margin-top: 30px;
+      margin-bottom: 50px;
     }
 
-    .fb-page,
-    .youtube-embed {
-      min-height: 400px;
-      max-height: 600px;
+    /* Center text inside map section headings and paragraphs */
+    #map-section h3,
+    #map-section p {
+      text-align: center;
     }
 
+    /* Additional styling for map iframe */
+    #map-section iframe {
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Center text and flex alignment for section cards */
     .section-card.text-center {
       align-items: center;
       justify-content: center;
       text-align: center;
     }
 
-    #get-started {
-      background-color: #4274AD;
-      color: white;
-      padding: 2rem 0;
-      text-align: center;
+    /* Add vertical margin between top and bottom rows */
+    .row.gap-row {
+      margin-top: 50px; /* comfortable gap */
     }
 
-    #get-started h3 {
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-
-    #get-started p {
-      font-size: 1.1rem;
-    }
-
-    footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 1rem 0;
+    /* Ensure fb-page and youtube embed have min and max height */
+    .fb-page,
+    .youtube-embed {
+      min-height: 400px;
+      max-height: 600px;
     }
   </style>
 </head>
 
 <body>
+  <!-- Facebook SDK root for Facebook feed plugin -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
     nonce="FBSDK"></script>
 
+  <!-- Navbar placeholder - loaded dynamically via jQuery -->
   <div id="nav-placeholder"></div>
 
+  <!-- Main content section container -->
   <main class="main-section container">
-    <!-- Top Row: Our Mission | Map | Founder -->
+
+    <!-- Top Row: Our Mission | Find Us (Map) | Meet Our Founder -->
     <div class="row d-flex align-items-stretch">
-      <!-- Our Mission -->
+      <!-- Left Column: Our Mission Card -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Our Mission</h3>
@@ -116,21 +137,19 @@
         </div>
       </div>
 
-      <!-- Map -->
-      <div class="col-lg-6 col-md-12 d-flex">
-        <div class="section-card d-flex flex-column justify-content-center w-100">
-          <h3 class="text-center">Find Us</h3>
-          <p class="text-center">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
-          <div class="embed-responsive">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-              width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+      <!-- Middle Column: Map -->
+      <div class="col-lg-6 col-md-12 d-flex" id="map-section">
+        <div class="section-card text-center flex-fill d-flex flex-column">
+          <h3>Find Us</h3>
+          <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+            width="100%" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
 
-      <!-- Meet Our Founder -->
+      <!-- Right Column: Meet Our Founder Card -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column align-items-center">
           <h3>Meet Our Founder</h3>
@@ -146,11 +165,11 @@
     </div>
 
     <!-- Bottom Row: Facebook Feed | YouTube Feed -->
-    <div class="row d-flex align-items-stretch">
-      <!-- Facebook -->
-      <div class="col-md-6 d-flex">
-        <div class="section-card d-flex flex-column w-100">
-          <h3 class="text-center">Latest from our Facebook</h3>
+    <div class="row d-flex align-items-stretch gap-row">
+      <!-- Facebook Feed -->
+      <div class="col-lg-6 col-md-12 d-flex">
+        <div class="fb-container text-center flex-fill d-flex flex-column">
+          <h3>Latest from our Facebook</h3>
           <div class="fb-page flex-grow-1"
             data-href="https://www.facebook.com/footandball.academy"
             data-tabs="timeline"
@@ -167,39 +186,42 @@
         </div>
       </div>
 
-      <!-- YouTube -->
-      <div class="col-md-6 d-flex">
-        <div class="section-card d-flex flex-column w-100">
-          <h3 class="text-center">Latest on YouTube</h3>
-          <div class="embed-responsive">
-            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=YourYouTubeUsername"
-              title="YouTube Feed" allowfullscreen></iframe>
+      <!-- YouTube Feed -->
+      <div class="col-lg-6 col-md-12 d-flex">
+        <div class="section-card text-center flex-fill d-flex flex-column">
+          <h3>Latest from our YouTube</h3>
+          <div class="youtube-embed flex-grow-1" style="position: relative; padding-bottom: 56.25%; height: 0;">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLYOURPLAYLISTID"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" allowfullscreen
+              loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
     </div>
+
   </main>
 
-  <!-- Get Started CTA -->
-  <section id="get-started">
+  <!-- Get Started Section with call to action -->
+  <section id="get-started" style="background-color: #4274AD; color: white; padding: 1.5rem 0; text-align: center; background-image: none !important;">
     <div class="container">
-      <h3>Football is the World Game.</h3>
-      <p>Foot and Ball Academy is proud to be a part of that.</p>
+      <h3 style="font-size: 2rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
+      <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
+  <!-- Footer Section - dynamically loaded -->
+  <footer style="background-color: #000; color: white; text-align: center; padding: 1rem 0;">
     <div id="foot-placeholder"></div>
   </footer>
 
-  <!-- Scripts -->
+  <!-- JS Script includes: jQuery, Popper, Bootstrap, UIKit -->
   <script src="js/jquery-3.6.4.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
 
+  <!-- Load navbar and footer HTML dynamically -->
   <script>
     $(document).ready(function () {
       $("#nav-placeholder").load("navbar.html");
