--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       background-color: #f4f4f4;
     }
 
-    /* Main container padding */
-    .main-section {
-      padding: 50px 15px;
-    }
-
     /* Card style for content boxes */
     .section-card {
       background-color: #ffffff;
@@ -41,52 +36,43 @@
       margin-top: 15px;
     }
 
-    /* Facebook container and map section layout */
+    /* Facebook and Youtube feed containers */
     .fb-container,
-    #map-section {
+    .yt-container {
       margin-top: 30px;
       display: flex;
       flex-direction: column;
       height: 100%;
     }
 
-    /* Facebook page plugin sizing */
-    .fb-page {
+    /* Facebook and Youtube plugins sizing */
+    .fb-page,
+    .yt-iframe {
       flex-grow: 1;
       min-height: 400px;
       max-height: 600px;
       width: 100% !important;
-    }
-
-    /* Iframe base styling */
-    iframe {
-      width: 100% !important;
-      max-width: 100%;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Specifically set Google map iframe height taller */
+    /* Specifically set Google map iframe height */
     #map-section iframe {
-      height: 620px !important; /* increased from 500px */
+      height: 550px !important;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     /* Margins for map section */
     #map-section {
       margin-top: 30px;
       margin-bottom: 50px;
+      height: 550px;
     }
 
-    /* Center text inside map section headings and paragraphs */
-    #map-section h3,
-    #map-section p {
-      text-align: center;
-    }
-
-    /* Additional styling for map iframe */
-    #map-section iframe {
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Gap between top columns and bottom feeds */
+    #feeds-section {
+      margin-top: 50px;
     }
 
     /* Center text and flex alignment for section cards */
@@ -94,18 +80,6 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-    }
-
-    /* Add vertical margin between top and bottom rows */
-    .row.gap-row {
-      margin-top: 50px; /* comfortable gap */
-    }
-
-    /* Ensure fb-page and youtube embed have min and max height */
-    .fb-page,
-    .youtube-embed {
-      min-height: 400px;
-      max-height: 600px;
     }
   </style>
 </head>
@@ -121,10 +95,9 @@
   <div id="nav-placeholder"></div>
 
   <!-- Main content section container -->
-  <main class="main-section container">
-
-    <!-- Top Row: Our Mission | Find Us (Map) | Meet Our Founder -->
-    <div class="row d-flex align-items-stretch">
+  <main class="container">
+    <!-- Top row: 3 | 6 | 3 columns -->
+    <div class="row d-flex">
       <!-- Left Column: Our Mission Card -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column justify-content-center">
@@ -137,21 +110,17 @@
         </div>
       </div>
 
-      <!-- Middle Column: Map -->
+      <!-- Middle Column: Map Section -->
       <div class="col-lg-6 col-md-12 d-flex" id="map-section">
-        <div class="section-card text-center flex-fill d-flex flex-column">
-          <h3>Find Us</h3>
-          <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-            width="100%" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+          width="100%" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <!-- Right Column: Meet Our Founder Card -->
       <div class="col-lg-3 col-md-6 d-flex">
-        <div class="section-card text-center d-flex flex-column align-items-center">
+        <div class="section-card text-center d-flex flex-column justify-content-center align-items-center">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education
             from around the world.</p>
@@ -164,9 +133,9 @@
       </div>
     </div>
 
-    <!-- Bottom Row: Facebook Feed | YouTube Feed -->
-    <div class="row d-flex align-items-stretch gap-row">
-      <!-- Facebook Feed -->
+    <!-- Bottom row: Facebook Feed | Youtube Feed -->
+    <div class="row d-flex" id="feeds-section">
+      <!-- Facebook Feed Column -->
       <div class="col-lg-6 col-md-12 d-flex">
         <div class="fb-container text-center flex-fill d-flex flex-column">
           <h3>Latest from our Facebook</h3>
@@ -186,26 +155,23 @@
         </div>
       </div>
 
-      <!-- YouTube Feed -->
+      <!-- Youtube Feed Column -->
       <div class="col-lg-6 col-md-12 d-flex">
-        <div class="section-card text-center flex-fill d-flex flex-column">
+        <div class="yt-container text-center flex-fill d-flex flex-column">
           <h3>Latest from our YouTube</h3>
-          <div class="youtube-embed flex-grow-1" style="position: relative; padding-bottom: 56.25%; height: 0;">
-            <iframe src="https://www.youtube.com/embed/videoseries?list=PLYOURPLAYLISTID"
-              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" allowfullscreen
-              loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+          <iframe class="yt-iframe" src="https://www.youtube.com/embed?listType=user_uploads&list=footandballacademy"
+            title="YouTube channel feed" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-
   </main>
 
   <!-- Get Started Section with call to action -->
   <section id="get-started" style="background-color: #4274AD; color: white; padding: 1.5rem 0; text-align: center; background-image: none !important;">
     <div class="container">
       <h3 style="font-size: 2rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
-      <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
+      <p style="font-size: 1.1rem;">Foot and Ball Academy is proud to be a part of that.</p>
     </div>
   </section>
 
