--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     /* Specifically set Google map iframe height */
     #map-section iframe {
-      height: 540px !important;
+      height: 550px !important;
     }
 
     /* Margins for map section */
@@ -96,11 +96,11 @@
       text-align: center;
     }
 
-    /* Reduce vertical padding for all cards in the top row */
+    /* Adjust top row section-card padding gently */
     .main-section > .row > .col-lg-3 > .section-card,
     .main-section > .row > .col-lg-6 > .section-card {
-      padding-top: 12px !important;
-      padding-bottom: 12px !important;
+      padding: 15px 20px; /* reduced vertical padding from 20px to 15px */
+      height: 100%;
     }
   </style>
 </head>
@@ -131,13 +131,13 @@
       </div>
 
       <!-- Middle Column: Map Feed -->
-      <div class="col-lg-6 col-md-12 d-flex">
-        <div id="map-section" class="section-card flex-fill d-flex flex-column">
-          <h3 class="text-center">Find Us</h3>
-          <p class="text-center">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
+      <div class="col-lg-6 col-md-6 d-flex">
+        <div class="section-card text-center d-flex flex-column justify-content-center">
+          <h3>Find Us</h3>
+          <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+            width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
@@ -157,11 +157,10 @@
       </div>
     </div>
 
-    <!-- Row with Facebook and YouTube feeds -->
-    <div class="row my-4 g-4">
-      <!-- Facebook Feed -->
+    <!-- Facebook and YouTube Feeds Row -->
+    <div class="row mt-4">
       <div class="col-lg-6 col-md-12 d-flex">
-        <div class="fb-container section-card text-center flex-fill d-flex flex-column">
+        <div class="fb-container text-center flex-fill d-flex flex-column section-card">
           <h3>Latest from our Facebook</h3>
           <div class="fb-page flex-grow-1"
             data-href="https://www.facebook.com/footandball.academy"
@@ -178,32 +177,20 @@
           </div>
         </div>
       </div>
-
-      <!-- YouTube Feed -->
       <div class="col-lg-6 col-md-12 d-flex">
-        <div class="section-card text-center flex-fill d-flex flex-column">
+        <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Latest from our YouTube</h3>
-          <div class="flex-grow-1" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=YourYouTubeChannelName"
-              frameborder="0" allowfullscreen
-              style="position: absolute; top:0; left: 0; width: 100%; height: 100%;">
-            </iframe>
-          </div>
+          <iframe width="100%" height="500" src="https://www.youtube.com/embed?listType=user_uploads&list=footandballacademy"
+            title="YouTube channel videos" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </main>
 
-  <!-- Get Started Section with call to action, reduced height -->
-  <section id="get-started" style="background-color: #4274AD; color: white; padding: 1.5rem 0; text-align: center;">
-    <div class="container">
-      <h3 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
-      <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
-    </div>
-  </section>
-
-  <!-- Footer Section - dynamically loaded -->
-  <footer style="background-color: #000; color: white; text-align: center; padding: 1rem 0;">
+  <!-- Footer Section - drastically reduced height -->
+  <footer style="background-color: #4274AD; color: white; text-align: center; padding: 1.5rem 0;">
     <div id="foot-placeholder"></div>
   </footer>
 
